layout height overflow bug fixed

--- a/components/Layouts/HomeLayout.module.scss
+++ b/components/Layouts/HomeLayout.module.scss
@@ -3,9 +3,9 @@
     height: 100vh;
     width: 100vw;
     display: flex;
+    overflow: hidden;
     justify-content: space-between;
     .aside{
-        height: 100%;
         padding: 0.5rem;
         background-color: var(--base-color);
     }
