--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -1,5 +1,4 @@
 .container {
-  min-height: 100%;
   padding-right: 1rem;
   // width: 300px;
   // background-color: var(--base-color);
